# cont3xt

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
configs/: novel_writing.yaml
data/: .gitkeep  novel_memory.db
docker/: Dockerfile
documentation/: checkpoint_0809-1422.md  checkpoint_0809-1455.md  cont3xt_v0.md  dev-plan_creative.md  initial_implementation.md  todo.md
implementation/: task_1.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  task_15.md  task_2.md  task_3.md  task_4.md  task_5.md  task_6.md  task_7.md  task_8.md  task_9.md
src/virtual_context_mcp/: __init__.py  __main__.py  context_manager.py  pressure_valve.py  server.py
src/virtual_context_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/virtual_context_mcp/chunking/: __init__.py  chunk.py  tokenizer.py
src/virtual_context_mcp/config/: __init__.py  settings.py
src/virtual_context_mcp/entities/: __init__.py  story_entities.py
src/virtual_context_mcp/memory/: __init__.py  graph_store.py  sqlite_store.py  vector_store.py
src/virtual_context_mcp/retrieval/: __init__.py  relevance_scorer.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  performance_targets.py  story_data.py  test_config.yaml
tests/integration/: __init__.py  test_full_story_workflow.py
tests/unit/: test_tokenizer.py
